ticketing/infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ticketing.dev
    http:
      paths:
      # Auth 
      - pathType: Prefix
        path: "/api/users"
        backend:
          service:
            name: auth-srv
            port:
              number: 3000
